# wrm3_term_colors

./: README.md  pyproject.toml  setup.py
src/: cls.py
tests/: test_main.py
wrm3_term_colors/: __init__.py  cls.py  cls_wrm3_term_colors.py  main.py  pallette.py
wrm3_term_colors.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
